--- a/templates/error.html
+++ b/templates/error.html
@@ -1,29 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/static/style.css" />
-    <title>Error</title>
-</head>
-<body>
-    <nav class="navbar">
-        <div class="navbar-container">
-        <img src="/static/logo.png" alt="ReserGo Logo" class="logo" />
-        <span class="app-name">{{.AppName}}</span>
-        </div>
-    </nav>
+{{define "title"}}Error - ReserGo{{end}}
 
-    <div class="container">
-        <h1>Error</h1>
-        <p style="color:red;">{{.Message}}</p>
-        <a href="/">Go back to booking form</a>
-    </div>
-
-    <footer class="footer">
-        <p>Created by Annarhysa Albert | 
-        <a href="https://www.linkedin.com/in/annarhysa-albert" target="_blank" rel="noopener">LinkedIn</a> | 
-        <a href="https://github.com/yourusername/ReserGo" target="_blank" rel="noopener">Source Code</a>
-        </p>
-    </footer>
-</body>
-</html>
+{{define "content"}}
+<h1>Error</h1>
+<p style="color:#d5b893;">{{.Message}}</p>
+<a href="/">Go back to booking form</a>
+{{end}}
