feat(confirmation.html)!: Rendering the page

--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -6,10 +6,12 @@
     <title>Booking Confirmation</title>
 </head>
 <body>
-    <h1>Thank you, {{.FirstName}} {{.LastName}}!</h1>
-    <p>You have successfully booked {{.NumberOfTickets}} ticket(s).</p>
-    <p>A confirmation email will be sent to: {{.Email}}</p>
-    <p>Tickets remaining: {{.Remaining}}</p>
-    <a href="/">Book more tickets</a>
+    <div class="container">
+        <h1>Thank you, {{.FirstName}} {{.LastName}}!</h1>
+        <p>You have successfully booked {{.NumberOfTickets}} ticket(s).</p>
+        <p>A confirmation email will be sent to: {{.Email}}</p>
+        <p>Tickets remaining: {{.Remaining}}</p>
+        <a href="/">Book more tickets</a>
+    </div>
 </body>
 </html>
