--- a/templates/error.html
+++ b/templates/error.html
@@ -15,7 +15,7 @@
 
     <div class="container">
         <h1>Error</h1>
-        <p style="color:red;">{{.Message}}</p>
+        <p style="color:#d5b893;">{{.Message}}</p>
         <a href="/">Go back to booking form</a>
     </div>
 
