--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="/static/confirmation.css" />
     <title>Booking Confirmation</title>
 </head>
 <body>
-    <div class="container">
+    <div class="confirmation-container">
         <h1>Thank you, {{.FirstName}} {{.LastName}}!</h1>
         <p>You have successfully booked {{.NumberOfTickets}} ticket(s).</p>
         <p>A confirmation email will be sent to: {{.Email}}</p>
