--- a/static/style.css
+++ b/static/style.css
@@ -19,7 +19,7 @@ body {
 
 .container {
     background: #25344F;
-    margin-top: 100px;
+    margin-top: 85px;
     margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
@@ -129,8 +129,8 @@ button:active {
 /* Navbar styles */
 .navbar {
   width: 100%;
-  background-color: #632024;
-  padding: 12px 20px;
+  background-color: #632024e3;
+  padding: 5px 20px;
   box-shadow: 0 2px 6px #6F4D38;
   position: fixed;
   top: 0;
@@ -145,15 +145,9 @@ button:active {
 }
 
 .logo {
-  height: 36px;
-  width: 36px;
+  height: 45px;
+  width: 100px;
   margin-right: 12px;
-}
-
-.app-name {
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: #d5b893;
 }
 
 
