feat(footer): Added URLs

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,8 +28,8 @@
 
     <footer class="footer">
         <p>Created by Annarhysa Albert | 
-        <a href="https://www.linkedin.com/in/annarhysa-albert" target="_blank" rel="noopener">LinkedIn</a> | 
-        <a href="https://github.com/yourusername/ReserGo" target="_blank" rel="noopener">Source Code</a>
+        <a href="https://www.linkedin.com/in/annarhysa-albert-92550918b/" target="_blank" rel="noopener">LinkedIn</a> | 
+        <a href="https://github.com/Annarhysa/ReserGo" target="_blank" rel="noopener">Source Code</a>
         </p>
     </footer>
 </body>
