--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <form action="/book" method="POST">
             <div class="app-caption">
-                <h2>Book your Tickets - <span class="h2-span">Hassle Free</span></h2>
+                <h2>Book your Tickets <span class="h2-span">Hassle Free</span></h2>
             </div>
             <div class="caption">
                 Tickets Available: {{.RemainingTickets}} / {{.TotalTickets}}
